# rust-fundamentals

./: Cargo.toml  LICENSE
Week 1/: rust-install.md
Week 1/.devcontainer/: devcontainer.json
Week 1/src/: main.rs
Week 2/: cargo.md
Week 2/cargo-samples/foo-bar/: Cargo.toml
Week 2/variables/src/: main.rs
