[package]
name = "rust-fundamentals"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "week1_main"
path = "Week 1/src/main.rs"

[[bin]]
name = "variables"
path = "Week 2/variables/src/main.rs"

# Add additional [[bin]] sections for other main.rs files as needed
